<resources>
    <string name="selected_language">English</string>
    <string name="language">En, US</string>
    <string name="app_name">Shallom</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter Password</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="user_info">User Information</string>
    <string name="sign_up">SIGN UP</string>
    <string name="firstname">First Name</string>
    <string name="firstname_hint">First Name</string>
    <string name="surname">Surname</string>
    <string name="surname_hint">Surname</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">0712345678</string>
    <string name="next">NEXT</string>
    <string name="have_account">Already have an account?</string>
    <string name="login"><u>Log In</u></string>
    <string name="locality">LOCATION</string>
    <string name="user_cont">Continued…</string>
    <string name="county">County</string>
    <string name="county_prompt">Select Your County</string>
    <string name="sub_county">Sub County</string>
    <string name="village">Village</string>
    <string name="group">Group</string>
    <string name="designation">Designation</string>
    <string name="previous">PREV</string>
    <string name="secure_account">ACCOUNT SECURITY</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register Account</string>
    <string name="phone_verification">MOBILE VERIFICATION</string>
    <string name="sms_notification">Please enter the Code sent to your phone.</string>
    <string name="resend"><u> Request Code </u></string>
    <string name="did_not_receive_text">Did not receive any code?</string>
    <string name="verify">VERIFY</string>
    <string name="home">Home</string>
    <string name="request">Request</string>
    <string name="lesson">Lesson</string>
    <string name="songs">Songs</string>
    <string name="day">24</string>
    <string name="month">NOV</string>
    <string name="event_location">LOCATION</string>
    <string name="event_name">TITLE OF THE EVENT</string>
    <string name="event_description">Description</string>
    <string name="event_duration">Event Running Days</string>
    <string name="number">03</string>
    <string name="week">Wks</string>
    <string name="minutes">Mins</string>
    <string name="hours">Hrs</string>
    <string name="days">Days</string>
    <string name="greeting_text">Good Morning</string>
    <string name="username_cap">USERNAME</string>
    <string name="acronym_text">ACRONYM</string>
    <string name="event_description_cap">DESCRIPTION</string>
    <string name="todo">TODO</string>
    <string name="sample_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. <link>Nullam feugiat</link>, <br>libero ac consectetur tincidunt, velit est fermentum erat, non dictum tortor ex a elit. Sed vehicula</br>
        orci vel magna fringilla, in efficitur libero convallis. Vivamus in nunc eu libero hendrerit tempus.
        Nullam sed est ac odio volutpat tempor in eu lorem. Phasellus efficitur varius risus, sit amet
        sollicitudin urna. Aenean ac justo id augue sagittis vestibulum. Proin vel my name is ichaelmungai maina from the village of gatuanyaga where milk and honey flows"</string>
    <string name="read_more">READ MORE</string>
    <string name="sermon_title">TITLE</string>
    <string name="sermon_scripture">SCRIPTURE</string>
    <string name="ministry_name">NAME OF MINISTRY</string>
    <string name="user_panel">USER PANEL</string>
    <string name="new_request">New Request(s)</string>
    <string name="my_request">My Request(s)</string>
    <string name="dashboard">Dashboard</string>
    <string name="manage_requests">Manage Request(s)</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="year_range">2023 – 2024</string>
    <string name="last_quarter">JAN-MAR</string>
    <string name="third_quarter">OCT-DEC</string>
    <string name="second_quarter">JUL-SEP</string>
    <string name="first_quarter">APR-JUN</string>
    <string name="scripture_reading">Scripture Reading</string>
    <string name="memory_verse">Memory Verse</string>
    <string name="explanation"><u>Editorial</u></string>
    <string name="explanation_text">Simple description</string>
    <string name="sample_bible_books">Proverbs 22:2, Psalms 10:10</string>
    <string name="sample_bible_book">Proverbs 22:2</string>
    <string name="category_text">MEM-VERSE</string>
    <string name="approved">Approved:</string>
    <string name="morning">MORNING</string>
    <string name="proposed">Proposed:</string>
    <string name="yes">YES</string>
    <string name="presented">Presented:</string>
    <string name="no">NO</string>
    <string name="date">2023-12-31</string>
    <string name="sample_location">MARURUI</string>
    <string name="date_day">THU</string>
    <string name="date_day_digit">24</string>
    <string name="reject">REJECT</string>
    <string name="approve">APPROVE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="announcement_text">Announcement</string>
    <string name="group_text">Groups</string>
    <string name="sermon_text">Sermons</string>
    <string name="ministry_text">Ministries</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="missing_username">Input Username!</string>
    <string name="empty_password">Input Password!</string>
    <string name="not_valid_password">Not a Valid Password!</string>
    <string name="invalid_password">Invalid Username or Password!</string>
    <string name="input_this_field">Required Input!</string>
    <string name="not_valid_email">Invalid Email!</string>
    <string name="invalid_phone">Invalid Phone Number!</string>
    <string name="select_image">Add Your Passport!</string>
    <string name="select_a_value">Select an item!</string>
    <string name="region">Region</string>
    <string name="select_region">Select your region!</string>
    <string name="select_county">Select your county!</string>
    <string name="select_sub_county">Select sub-county!</string>
    <string name="select_village">Select your village!</string>
    <string name="select_group">Select your group!</string>
    <string name="select_designation">Select your designation!</string>
    <string name="already_exists">Designation already exists!</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select your gender!</string>
    <string name="designation_not_female">Only men are allowed!</string>
    <string name="pastor_is_cogmea">Postor must be a COGMEA!</string>
    <string name="governor_is_cogyok">Governor is a COGYOK!</string>
    <string name="strength_password">Password Strength</string>
    <string name="password_mismatch">Password does not match!</string>
    <string name="doctrine">Doctrine</string>
    <string name="name_surname">MICHAEL MAINA</string>
    <string name="welcome_text">Welcome to Our App</string>
    <string name="shallom_text">SHALLOM!</string>
    <string name="crafted_with_love">Developed with love</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="event_title">Title of event</string>
    <string name="event_location_small">Location</string>
    <string name="event_location_hint">Event location</string>
    <string name="event_title_hint">Input  Event Title</string>
    <string name="event_description_hint">A description of the event</string>
    <string name="event_start_date">Start date</string>
    <string name="event_end_date">End date</string>
    <string name="submit">SUBMIT</string>
    <string name="event_registration">Event Registration</string>
    <string name="event_update">Update event</string>
    <string name="update">UPDATE</string>
    <string name="enter_event_title">Enter event title!</string>
    <string name="enter_event_location">Enter event location!</string>
    <string name="enter_event_description">Enter event description!</string>
    <string name="event_update_success">Event successfully updated!</string>
    <string name="event_registration_success">Event successfully registered!</string>
    <string name="diaspora">Diaspora Divas Express Mart Ltd</string>
    <string name="past_events">Past Events</string>
    <string name="no_events">Empty Events!</string>
    <string name="introduction">Introduction</string>
    <string name="visit_website">Visit Website</string>
    <string name="faqs">F.A.Qs</string>
    <string name="welcome_bible_lesson">Welcome Shabbatton Odysseys</string>
    <string name="bible_lesson">BIBLE LESSON</string>
    <string name="bible_lesson_small">Bible Lesson</string>
    <string name="bible_lesson_bottom_text">Conveniency at best with a digital Bible lesson</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="pref_plan">Select your preferred plan</string>
    <string name="for_word">For</string>
    <string name="three_months">3 Months</string>
    <string name="amount_30">Ksh. 30</string>
    <string name="amount_90">Ksh. 90</string>
    <string name="nine_months">9 Months</string>
    <string name="six_months">6 Months</string>
    <string name="amount_120">Ksh. 120</string>
    <string name="one_year">1 Year</string>
    <string name="amount_60">Ksh. 60</string>
    <string name="payment_method">Payment Method</string>
    <string name="mpesa">M-pesa</string>
    <string name="confirm_number">Confirm that this is your active M-pesa phone number</string>
    <string name="update_number">You can update your phone number in user account settings</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="payment">Payment</string>
    <string name="transaction">Transaction</string>
    <string name="complete_transaction">Please, input your M-pesa PIN in upcoming dialog to complete your transaction.\nThank you.</string>
    <string name="ok">OK</string>
    <string name="search_filter">Search | Filter</string>
    <string name="quarters">Quarters</string>
    <string name="years">Year</string>
    <string name="english">ENGLISH</string>
    <string name="kiswahili">KISWAHILI</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="questions">Questions</string>
    <string name="doctrines">Doctrines</string>
    <string name="bible_ref">Bible Reference</string>
    <string name="worship">WORSHIP</string>
    <string name="praise">PRAISE</string>
    <string name="group_songs">GROUP SONGS</string>
    <string name="all_songs">ALL SONGS</string>
    <string name="chorus">CHORUS</string>
    <string name="song_title">Song Title</string>
    <string name="cogyok">COGYOK</string>
    <string name="mewak">MEWAK</string>
    <string name="cogmea">COGMEA</string>
    <string name="already_favourite">Already a fouvourite!</string>
    <string name="secs">Secs</string>
    <string name="choose_action">Choose Action</string>
    <string name="action_delete">DELETE</string>
    <string name="action_update">UPDATE</string>
    <string name="new_event">New Event</string>
    <string name="good_night">GOOD NIGHT!</string>
    <string name="good_evening">GOOD EVENING!</string>
    <string name="good_afternoon">GOOD AFTERNOON!</string>
    <string name="good_morning">GOOD MORNING!</string>
</resources>