<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2024. Maina Michael.
  ~ Created on 2024 / 2 / 8
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:backgroundTint="#37070707"
    android:backgroundTintMode="src_atop"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_registration"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ibmplexsanshebrew_medium"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey_150"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEventTitle"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:textColorHint="@color/grey_350"
        android:hint="@string/event_title_hint"
        android:layout_marginTop="@dimen/margin_top"
        style="@style/OutlinedRoundedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEventTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="italic"
            android:inputType="text"
            android:fontFamily="@font/ibmplexsanshebrew_regular"
            android:textSize="14sp"
            android:background="@drawable/round_corner_toggle_less"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/event_location_small"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey_150"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEventLocation"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:textColorHint="@color/grey_350"
        android:hint="@string/event_location_hint"
        android:layout_marginTop="@dimen/margin_top"
        style="@style/OutlinedRoundedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEventLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="italic"
            android:inputType="text"
            android:fontFamily="@font/ibmplexsanshebrew_regular"
            android:textSize="14sp"
            android:background="@drawable/round_corner_toggle_less"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/event_description"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey_150"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEventDescription"
        android:layout_width="310dp"
        android:layout_height="100dp"
        android:textColorHint="@color/grey_350"
        android:hint="@string/event_description_hint"
        android:layout_marginTop="@dimen/margin_top"
        style="@style/OutlinedRoundedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEventDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="italic"
            android:inputType="text"
            android:fontFamily="@font/ibmplexsanshebrew_regular"
            android:textSize="14sp"
            android:maxLines="15"
            android:background="@drawable/round_corner_toggle_less"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/event_start_date"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey_150"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>
    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:hint="@string/event_start_date"
        android:textColorHint="@color/white_"
        android:layout_marginTop="15dp"
        android:textColor="@color/white_"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/buton_background"
        android:backgroundTint="#941A1B19"
        android:backgroundTintMode="src_atop"
        android:foreground="@drawable/card_view_border_round"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>
    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/event_end_date"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey_150"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>
    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:hint="@string/event_end_date"
        android:textColorHint="@color/white_"
        android:layout_marginTop="15dp"
        android:textColor="@color/white_"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/buton_background"
        android:backgroundTint="#941A1B19"
        android:backgroundTintMode="src_atop"
        android:foreground="@drawable/card_view_border_round"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_top"
        android:fontFamily="@font/ibmplexsanshebrew_medium"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="@drawable/buton_background"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="48dp"
        android:textSize="14sp"
        android:fontFamily="@font/ibmplexsanshebrew_medium"
        android:textStyle="bold"/>


</androidx.appcompat.widget.LinearLayoutCompat>