<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="start"
    android:backgroundTint="#A1000000"
    android:backgroundTintMode="src_over"
    android:background="@color/colorless">
    <TextView
        android:id="@+id/textViewMinistryTitle"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/sermon_title"
        android:textColor="@color/green_bright"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_gravity="start"
        android:fontFamily="@font/ibmplexsanshebrew_bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">
        <ImageView
            android:id="@+id/imageViewAcronymImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/image_avatar"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:foreground="#A4000000"/>
        <TextView
            android:id="@+id/textViewMinistryName"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/ministry_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="21sp"
            android:maxLines="1"
            android:layout_gravity="start"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ibmplexsanshebrew_bold"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:elevation="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_top"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/green_dark">
        <TextView
            android:id="@+id/textViewOpenMinistryDescription"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/event_description_cap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="19sp"
            android:maxLines="1"
            android:layout_gravity="center"
            android:fontFamily="@font/ibmplexsanshebrew_bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_icon"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:rotation="270"
            android:layout_gravity="end"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textViewMinistryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:text="@string/sample_text"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="12sp"
        android:maxLines="10"
        android:ellipsize="end"
        android:layout_gravity="center"
        android:justificationMode="inter_word"
        android:fontFamily="@font/ibmplexsanshebrew_bold"/>
    <TextView
        android:id="@+id/textViewReadMore"
        android:layout_margin="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/read_more"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="19sp"
        android:maxLines="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/red_cardview_border"
        android:fontFamily="@font/ibmplexsanshebrew_bold"/>

</androidx.appcompat.widget.LinearLayoutCompat>