<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_top"
    app:cardBackgroundColor="@color/green_light"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="top"
    android:background="@color/green_700">
    <androidx.cardview.widget.CardView
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:cardBackgroundColor="@color/green_light"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/textViewQuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:fontFamily="@font/ibmplexsanshebrew_bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_top">
        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="13sp"
            android:maxLines="1"
            android:layout_gravity="start"
            android:fontFamily="@font/ibmplexsanshebrew_bold"/>
        <TextView
            android:id="@+id/textViewRefScripture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_bible_books"
            android:textColor="@color/white_"
            android:textStyle="normal"
            android:textSize="12sp"
            android:maxLines="1"
            android:layout_gravity="start"
            android:scrollbars="horizontal"
            android:scrollHorizontally="true"
            android:scrollbarStyle="insideInset"
            android:scrollbarSize="1dp"
            android:fontFamily="@font/ibmplexsanshebrew_regular"/>
        <TextView
            android:id="@+id/textViewExplanationTitle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/explanation"
            android:textColor="@color/green_bright"
            android:textStyle="normal"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_top"
            android:maxLines="1"
            android:layout_gravity="start"
            android:fontFamily="@font/ibmplexsanshebrew_bold"/>
        <TextView
            android:id="@+id/textViewExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explanation_text"
            android:textColor="@color/white_"
            android:textStyle="normal"
            android:textSize="12sp"
            android:layout_gravity="start"
            android:justificationMode="inter_word"
            android:fontFamily="@font/ibmplexsanshebrew_regular"/>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>