<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2024. Maina Michael.
  ~ Created on 2024 / 2 / 12
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:backgroundTint="#37070707"
    android:backgroundTintMode="src_atop"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ibmplexsanshebrew_medium"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/ibmplexsanshebrew_light"
        android:maxLines="3"
        android:text="@string/complete_transaction"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOk"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:background="@drawable/buton_background"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:maxLines="1"
        android:fontFamily="@font/ibmplexsanshebrew_medium"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>