<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayoutCompatGroup"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="start"
    android:backgroundTint="#A1000000"
    android:backgroundTintMode="src_over"
    android:background="@color/transparent">
    <TextView
        android:id="@+id/textViewGroupAcronym"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/acronym_text"
        android:textColor="@color/green_bright"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_gravity="start"
        android:fontFamily="@font/ibmplexsanshebrew_bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top">
        <ImageView
            android:id="@+id/imageViewAcronymImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_image_avatar"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:foreground="#A4000000"/>
        <TextView
            android:id="@+id/textViewGroupAcronymTopText"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/acronym_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="21sp"
            android:maxLines="1"
            android:layout_gravity="start"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ibmplexsanshebrew_bold"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:elevation="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_top"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/green_dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/event_description_cap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="19sp"
            android:maxLines="1"
            android:layout_gravity="center"
            android:fontFamily="@font/ibmplexsanshebrew_bold"/>
        <ImageView
            android:id="@+id/descriptionImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:rotation="270"
            android:layout_gravity="end"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textViewGroupDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:text="@string/sample_text"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:justificationMode="inter_word"
        android:fontFamily="@font/ibmplexsanshebrew_bold"/>

</androidx.appcompat.widget.LinearLayoutCompat>